Rapid Prd/src/objects/BOOP__c.object
<CustomObject>
    <fields>
        <fullName>Renewal_Number__c</fullName>
        <label>Renewal Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rocket_Loans_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rocket Loans Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rocket_Loans_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rocket Loans Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rocket_Loans_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rocket Loans Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seek_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seek Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seek_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seek Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seek_Submitted_Date__c</fullName>
        <label>Seek Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Seek_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seek Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smartbiz_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smartbiz Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smartbiz_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smartbiz Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smartbiz_Submitted_Date__c</fullName>
        <label>Smartbiz Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Smartbiz_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smartbiz Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Quote_Date__c</fullName>
        <label>Snap Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Snap_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Submitted_Date__c</fullName>
        <label>Snap Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Snap_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_Short__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold Short</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Operations__c</fullName>
        <label>State of Operations</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Quotes Received</fullName>
                </value>
                <value>
                    <fullName>Quotes Sold</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Funded - Rapid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stips__c</fullName>
        <label>Stips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strategic_Disqualfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Disqualfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Quote_Date__c</fullName>
        <label>Strategic Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Strategic_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Submitted_Date__c</fullName>
        <label>Strategic Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Strategic_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Shares_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street Shares Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Shares_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street Shares Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Shares_Submitted_Date__c</fullName>
        <label>Street Shares Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Street_Shares_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street Shares Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_G_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Super G Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_G_Quote_Date__c</fullName>
        <label>Super G Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Super_G_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Super G Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_G_Submitted_Date__c</fullName>
        <label>Super G Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Super_G_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Super G Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Lien_Balance__c</fullName>
        <label>Tax Lien Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Payment_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Liens Payment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <inlineHelpText>TERM IN MONTHS</inlineHelpText>
        <label>Quote Term</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>The_Fundworks_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Fundworks Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Fundworks_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Fundworks Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Fundworks_Submitted_Date__c</fullName>
        <label>The Fundworks Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>The_Fundworks_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Fundworks Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Submission_Count__c</fullName>
        <description>This field has been created as per Task 314 to capture the total Count of Submission done.</description>
        <label>Total Submission Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplyft_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uplyft Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uplyft_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uplyft Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uplyft_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uplyft Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <formula>Commission__c / Contracted_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upsell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>World_Business_Lenders_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>World Business Lenders Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>World_Business_Lenders_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>World Business Lenders Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>World_Business_Lenders_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>World Business Lenders Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24Cap_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>24Cap Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24Cap_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>24Cap Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24Cap_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>24Cap Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24_Cap_Quote_Date__c</fullName>
        <label>24 Cap Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X24_Cap_Submitted_Date__c</fullName>
        <label>24 Cap Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <label>Broker Out Op</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>BOOP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Out Op</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>